--- a/Echonotes/res/values-v11/styles.xml
+++ b/Echonotes/res/values-v11/styles.xml
@@ -1,11 +1,29 @@
-<resources>
+<resources xmlns:android="http://schemas.android.com/apk/res/android">
 
     <!--
         Base application theme for API 11+. This theme completely replaces
         AppBaseTheme from res/values/styles.xml on API 11+ devices.
     -->
     <style name="AppBaseTheme" parent="android:Theme.Holo.Light">
-        <!-- API 11 theme customizations can go here. -->
+        <item name = "android:actionBarStyle">@style/MyActionBar</item>
     </style>
+    
+    <style name = "MyTheme" parent="android:style/Theme.Holo.Light">
+        <item name = "android:actionBarStyle">@style/MyActionBar</item>
+        
+
+    </style>
+    
+    <style name = "MyActionBar" parent = "@android:style/Widget.Holo.Light.ActionBar">
+            <item name = "android:background">#06ba89</item>
+            <item name = "android:titleTextStyle">@style/MyActionBarTitleText</item>
+    </style>
+    
+    <style name = "MyActionBarTitleText" parent = "@android:style/TextAppearance.Holo.Widget.ActionBar.Title">
+            <item name = "android:textColor">#ffffff</item>
+            <item name = "android:textSize">18sp</item>
+    </style>
+    
+    
 
 </resources>
