Added line_item for custom list view, added more assets.

--- a/Echonotes/res/layout/notes_list.xml
+++ b/Echonotes/res/layout/notes_list.xml
@@ -2,7 +2,8 @@
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:orientation="vertical" >
+    android:orientation="vertical"
+    android:background="#e7e7e7" >
 
     <ScrollView
         android:id="@+id/scrollView1"
@@ -18,7 +19,10 @@
             <ImageButton
                 android:id="@+id/newNoteButton"
                 android:layout_width="match_parent"
-                android:layout_height="101dp"
+                android:layout_height="wrap_content"
+                android:layout_marginTop="10sp"
+                android:layout_marginLeft="10sp"
+                android:layout_marginRight="10sp"
                 android:background="@null"
                 android:src="@drawable/newnote_button" />
 
@@ -26,6 +30,8 @@
                 android:id="@+id/imageView1"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
+                android:layout_marginLeft="3sp"
+                android:layout_marginRight="3sp"
                 android:src="@drawable/separator_mainscreen" />
 
             <ListView
