--- a/Echonotes/res/layout/line_item.xml
+++ b/Echonotes/res/layout/line_item.xml
@@ -2,25 +2,24 @@
 <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
     android:layout_height="match_parent" >
-    
-    <ImageView
-        android:id="@+id/imageView2"
-        android:layout_width="wrap_content"
-        android:layout_height="80dp"
-        android:layout_alignParentLeft="true"
-        android:layout_alignParentTop="true"
-        android:src="@drawable/list_bg" />
 
+    <ImageView
+        android:id="@+id/listBGImageView"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_alignParentTop="true"
+        android:layout_centerHorizontal="true"
+        android:src="@drawable/list_bg" />
+        
     <TextView
         android:id="@+id/noteNameTextView"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_alignParentLeft="true"
-        android:layout_alignParentTop="true"
-        android:layout_marginLeft="12dp"
-        android:layout_marginTop="3dp"
-        android:text="Note Title"
-        android:fontFamily="sans-serif-medium"
+        android:layout_alignLeft="@+id/listBGImageView"
+        android:layout_marginLeft="15dp"
+        android:layout_marginTop="9dp"
+        android:textColor="#000000"
+        android:text="ADVSTAT First Meeting"
         android:textAppearance="?android:attr/textAppearanceLarge" />
 
     <TextView
@@ -52,7 +51,7 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_alignBottom="@+id/dateTextView"
-        android:layout_alignParentRight="true"
+        android:layout_alignRight="@+id/listBGImageView"
         android:layout_marginRight="12dp"
         android:src="@drawable/catmarker_cyan" />
 
