Fixed Navigation Drawer on Main UI
- Added ActionBarToggles for Nav Drawer (might put all nav drawer
related code in a separate class to make reusing the nav bar easier)
- Add Listener for NavDrawer

--- a/Echonotes/res/values-v11/styles.xml
+++ b/Echonotes/res/values-v11/styles.xml
@@ -8,7 +8,7 @@
         <item name = "android:actionBarStyle">@style/MyActionBar</item>
     </style>
     
-    <style name = "MyTheme" parent="android:style/Theme.Holo.Light">
+    <style name = "MyTheme" parent="android:style/Theme.Holo">
         <item name = "android:actionBarStyle">@style/MyActionBar</item>
         
 
