--- a/Echonotes/res/layout/annotationfullscreen.xml
+++ b/Echonotes/res/layout/annotationfullscreen.xml
@@ -2,14 +2,17 @@
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:orientation="vertical" >
+    android:orientation="vertical"
+    android:background="#e7e7e7" >
 
     <TextView
         android:id="@+id/noteNameTextView"
         android:layout_width="match_parent"
-        android:layout_height="wrap_content"
+        android:layout_height="0dp"
         android:layout_weight="0.62"
         android:text="Full Text"
+        android:textColor="#000000"
+        android:fontFamily="serif"
         android:textAppearance="?android:attr/textAppearanceMedium" />
 
 </LinearLayout>
