--- a/Echonotes/res/layout/list_of_notes.xml
+++ b/Echonotes/res/layout/list_of_notes.xml
@@ -2,45 +2,72 @@
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:orientation="vertical"
-    android:background="#e7e7e7" >
+    android:orientation="vertical" >
 
-    <ScrollView
-        android:id="@+id/scrollView1"
+    <android.support.v4.widget.DrawerLayout
+        xmlns:android="http://schemas.android.com/apk/res/android"
+        android:id="@+id/drawer_layout"
         android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:layout_weight="0.98" >
+        android:layout_height="match_parent" >
 
-        <LinearLayout
+        <!-- The main content view -->
+
+        <FrameLayout
+            android:id="@+id/content_frame"
             android:layout_width="match_parent"
+            android:layout_height="match_parent" >
+
+            <ScrollView
+                android:id="@+id/scrollView1"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:layout_weight="0.98" >
+
+                <LinearLayout
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:orientation="vertical" >
+
+                    <ImageButton
+                        android:id="@+id/newNoteButton"
+                        android:layout_width="match_parent"
+                        android:layout_height="wrap_content"
+                        android:layout_marginLeft="10sp"
+                        android:layout_marginRight="10sp"
+                        android:layout_marginTop="10sp"
+                        android:background="@null"
+                        android:src="@drawable/newnote_button" />
+
+                    <ImageView
+                        android:id="@+id/imageView1"
+                        android:layout_width="match_parent"
+                        android:layout_height="wrap_content"
+                        android:layout_marginLeft="3sp"
+                        android:layout_marginRight="3sp"
+                        android:src="@drawable/separator_mainscreen" />
+
+                    <ListView
+                        android:id="@+id/noteListView"
+                        android:layout_width="match_parent"
+                        android:layout_height="395dp"
+                        android:divider="@android:color/transparent"
+                        android:dividerHeight="0dp" >
+                    </ListView>
+                </LinearLayout>
+            </ScrollView>
+        </FrameLayout>
+
+        <!-- The navigation drawer -->
+
+        <ListView
+            android:id="@+id/left_drawer"
+            android:layout_width="240dp"
             android:layout_height="match_parent"
-            android:orientation="vertical" >
-
-            <ImageButton
-                android:id="@+id/newNoteButton"
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:layout_marginTop="10sp"
-                android:layout_marginLeft="10sp"
-                android:layout_marginRight="10sp"
-                android:background="@null"
-                android:src="@drawable/newnote_button" />
-
-            <ImageView
-                android:id="@+id/imageView1"
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:layout_marginLeft="3sp"
-                android:layout_marginRight="3sp"
-                android:src="@drawable/separator_mainscreen" />
-
-            <ListView
-                android:id="@+id/noteListView"
-                android:layout_width="match_parent"
-                android:layout_height="386dp" >
-            </ListView>
-
-        </LinearLayout>
-    </ScrollView>
+            android:layout_gravity="start"
+            android:background="#ffffff"
+            android:choiceMode="singleChoice"
+            android:divider="@android:color/transparent"
+            android:dividerHeight="0dp" />
+    </android.support.v4.widget.DrawerLayout>
 
 </LinearLayout>
