--- a/Echonotes/res/layout/nav_drawer.xml
+++ b/Echonotes/res/layout/nav_drawer.xml
@@ -9,6 +9,7 @@
         android:id="@+id/content_frame"
         android:layout_width="match_parent"
         android:layout_height="match_parent" />
+    
     <!-- The navigation drawer -->
     
     <ListView android:id="@+id/left_drawer"
@@ -18,6 +19,6 @@
         android:choiceMode="singleChoice"
         android:divider="@android:color/transparent"
         android:dividerHeight="0dp"
-        android:background="#111"/>
+        android:background="#ffffff"/>
     
 </android.support.v4.widget.DrawerLayout>
