--- a/Echonotes/res/values-v11/styles.xml
+++ b/Echonotes/res/values-v11/styles.xml
@@ -10,6 +10,7 @@
     
     <style name = "MyTheme" parent="android:style/Theme.Holo">
         <item name = "android:actionBarStyle">@style/MyActionBar</item>
+        <item name = "android:windowBackground">@color/background</item>
         
 
     </style>
