--- a/Echonotes/res/layout/note_playing_screen.xml
+++ b/Echonotes/res/layout/note_playing_screen.xml
@@ -31,7 +31,7 @@
                 android:src="@drawable/add_note_annotation" />
 
             <ImageView
-                android:id="@+id/imageView3"
+                android:id="@+id/newPhotoImageView"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:scaleType="fitEnd"
