--- a/Echonotes/res/layout/recorder_screen.xml
+++ b/Echonotes/res/layout/recorder_screen.xml
@@ -2,13 +2,12 @@
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:background="#e7e7e7"
     android:orientation="vertical" >
 
     <RelativeLayout
         android:id="@+id/imageButtonContainer"
         android:layout_width="match_parent"
-        android:layout_height="157dp"
+        android:layout_height="179dp"
         android:background="@drawable/list_bg"
         android:orientation="horizontal"
         android:weightSum="4" >
@@ -17,13 +16,13 @@
             android:id="@+id/buttonLayout"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:layout_marginBottom = "5dp"
             android:layout_alignParentBottom="true"
             android:layout_alignParentLeft="true"
+            android:layout_marginBottom="10dp"
             android:weightSum="2" >
 
             <ImageView
-                android:id="@+id/imageView2"
+                android:id="@+id/newTextNoteImageView"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:layout_weight="1"
@@ -35,27 +34,78 @@
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:scaleType="fitEnd"
-                android:src="@drawable/add_note_annotation" />
+                android:src="@drawable/add_picture_annotation" />
+
         </LinearLayout>
+
+        <TextView
+            android:id="@+id/recordTimeTextView"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_alignBottom="@+id/startRecordImageView"
+            android:layout_alignParentRight="true"
+            android:layout_marginRight="11dp"
+            android:fontFamily="sans-serif-light"
+            android:text="00:15"
+            android:textColor="#000000"
+            android:textSize="18sp" />
+
+        <TextView
+            android:id="@+id/numAnnotationsTextView"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_above="@+id/recordTimeTextView"
+            android:layout_alignRight="@+id/recordTimeTextView"
+            android:fontFamily="sans-serif-light"
+            android:text="annotations"
+            android:textAppearance="?android:attr/textAppearanceSmall"
+            android:textColor="#000000"
+            android:textSize="18sp" />
 
         <ImageView
             android:id="@+id/startRecordImageView"
             android:layout_width="80dp"
             android:layout_height="80dp"
-            android:layout_above="@+id/buttonLayout"
             android:layout_alignParentLeft="true"
-            android:layout_marginBottom="15dp"
-            android:layout_marginLeft="13dp"
+            android:layout_alignParentTop="true"
+            android:layout_marginLeft="17dp"
+            android:layout_marginTop="15dp"
             android:layout_weight="2"
             android:clickable="true"
             android:src="@drawable/start_record" />
+
+        <EditText
+            android:id="@+id/noteNameEditText"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_alignRight="@+id/numAnnotationsTextView"
+            android:layout_alignTop="@+id/startRecordImageView"
+            android:ems="10"
+            android:fontFamily="sans-serif-medium"
+            android:gravity="right"
+            android:text="NewNote1"
+            android:textColor="#000000"
+            android:background="@null"
+            android:textSize="22sp" >
+
+            <requestFocus />
+        </EditText>
+
+        <ImageView
+            android:id="@+id/imageView1"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_above="@+id/buttonLayout"
+            android:layout_centerHorizontal="true"
+            android:layout_marginBottom = "5dp"
+            android:src="@drawable/recording_separator" />
 
     </RelativeLayout>
 
     <ListView
         android:id="@+id/listView1"
         android:layout_width="match_parent"
-        android:layout_height="wrap_content" >
+        android:layout_height="match_parent" >
     </ListView>
 
 </LinearLayout>
