--- a/Echonotes/res/menu/list_of_notes.xml
+++ b/Echonotes/res/menu/list_of_notes.xml
@@ -3,7 +3,8 @@
     <item android:id="@+id/action_search"
           android:icon="@drawable/ic_action_search"
           android:title="@string/action_search"
-          android:showAsAction="ifRoom" />
+          android:showAsAction="ifRoom|collapseActionView"
+          android:actionViewClass="android.support.v7.widget.SearchView" />
     <!-- Settings, should always be in the overflow -->
     
     <item android:id="@+id/action_settings"
