RecordNote is now Feature Complete. Made changes to the theme, etc.

--- a/Echonotes/res/layout/text_annotation.xml
+++ b/Echonotes/res/layout/text_annotation.xml
@@ -11,7 +11,7 @@
         android:background="#ffffff" >
 
         <EditText
-            android:id="@+id/editText1"
+            android:id="@+id/textAnnotationEditText"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_alignParentBottom="true"
