--- a/Echonotes/res/values-v11/styles.xml
+++ b/Echonotes/res/values-v11/styles.xml
@@ -8,7 +8,7 @@
         <item name = "android:actionBarStyle">@style/MyActionBar</item>
     </style>
     
-    <style name = "MyTheme" parent="android:style/Theme.Holo">
+    <style name = "MyTheme" parent="android:Theme.Holo.Light.DarkActionBar">
         <item name = "android:actionBarStyle">@style/MyActionBar</item>
         <item name = "android:windowBackground">@color/background</item>
         
