--- a/Echonotes/res/layout/list_of_notes.xml
+++ b/Echonotes/res/layout/list_of_notes.xml
@@ -76,7 +76,7 @@
         android:layout_height="wrap_content"
         android:choiceMode="singleChoice"
         android:divider="@android:color/transparent"
-        android:dividerHeight="0dp"
+		android:dividerHeight="0dp"
         android:background="#ffffff"/>
     
     <TextView
@@ -92,8 +92,8 @@
         android:layout_width="match_parent"
         android:layout_height="match_parent"
         android:choiceMode="singleChoice"
-        android:divider="@android:color/transparent"
-        android:dividerHeight="0dp"
+        android:divider="@drawable/list_divider"
+        android:dividerHeight="1px"
         android:background="#ffffff"/>
         
 </LinearLayout>
