--- a/Echonotes/res/layout/navdrawer_list_item.xml
+++ b/Echonotes/res/layout/navdrawer_list_item.xml
@@ -1,15 +1,14 @@
-<?xml version="1.0" encoding="utf-8"?>
- 
 <TextView xmlns:android="http://schemas.android.com/apk/res/android"
     android:id="@android:id/text1"
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
-    android:textColor="#777777"
-    android:text="Test1"
-    android:fontFamily = "san-serif-light"
-    android:textSize="20sp"
+    android:fontFamily="sans-serif-light"
     android:gravity="center_vertical"
-    android:paddingStart="14.5sp"
-    android:paddingEnd="14.5sp"
     android:minHeight="40sp"
-/>
+    android:paddingTop="15sp"
+    android:paddingBottom="15sp"
+    android:paddingStart="15sp"
+    android:paddingEnd="15sp"
+    android:text="Test1"
+    android:textColor="#777777"
+    android:textSize="22sp" />
