Annotations now show up when recording.
Bugs: getAnnotationsByNote() still not working.

--- a/Echonotes/res/layout/recorder_screen.xml
+++ b/Echonotes/res/layout/recorder_screen.xml
@@ -98,10 +98,31 @@
     </RelativeLayout>
 
     <ViewStub
+        android:id="@+id/annotationShowStub"
+        android:layout_width="fill_parent"
+        android:layout_height="fill_parent"
+        android:layout_alignParentBottom="true"
+        android:layout_alignParentLeft="true"
+        android:layout_alignParentRight="true"
+        android:layout_below="@+id/imageButtonContainer"
+        android:inflatedId="@+id/annotationShower"
+        android:layout="@layout/annotation_shower_layout" />
+
+    <ViewStub
         android:id="@+id/stub"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
         android:inflatedId="@+id/subTree"
         android:layout="@layout/text_annotation" />
+
+    <LinearLayout
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_alignParentBottom="true"
+        android:layout_alignParentLeft="true"
+        android:layout_alignParentRight="true"
+        android:layout_below="@+id/imageButtonContainer"
+        android:orientation="vertical" >
+    </LinearLayout>
 
 </RelativeLayout>
