--- a/Echonotes/res/layout/annotation_image_shower.xml
+++ b/Echonotes/res/layout/annotation_image_shower.xml
@@ -10,23 +10,21 @@
         android:layout_height="match_parent"
         android:layout_centerHorizontal="true"
         android:layout_centerVertical="true"
-        android:layout_marginBottom="10dp"
+        android:layout_marginTop="10dp"
         android:layout_marginLeft="10dp"
         android:layout_marginRight="10dp"
-        android:layout_marginTop="10dp"
+        android:layout_marginBottom="10dp"
         android:background="#ffffff" />
 
-    <TextView
-        android:id="@+id/textAnnotationShowTextView"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_marginLeft="30dp"
+    <ImageView
+        android:id="@+id/imageAnnotationImageView"
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"
+        android:layout_alignTop="@+id/view1"
+        android:layout_centerHorizontal="true"
         android:layout_marginTop="30dp"
-        android:layout_marginBottom="30dp"
+        android:layout_marginLeft="30dp"
         android:layout_marginRight="30dp"
-        android:fontFamily="serif"
-        android:text="Medium Text"
-        android:textAppearance="?android:attr/textAppearanceMedium"
-        android:textSize="30sp" />
+        android:layout_marginBottom="30dp" />
 
 </RelativeLayout>
