--- a/Echonotes/res/layout/recorder_screen.xml
+++ b/Echonotes/res/layout/recorder_screen.xml
@@ -55,7 +55,7 @@
             android:layout_above="@+id/recordTimeChronometer"
             android:layout_alignRight="@+id/recordTimeChronometer"
             android:fontFamily="sans-serif-light"
-            android:text="annotations"
+            android:text="0 annotations"
             android:textAppearance="?android:attr/textAppearanceSmall"
             android:textColor="#000000"
             android:textSize="18sp" />
