Added Tags, Settings in RecordNote

--- a/Echonotes/res/layout/player_screen.xml
+++ b/Echonotes/res/layout/player_screen.xml
@@ -1,44 +1,80 @@
 <?xml version="1.0" encoding="utf-8"?>
-<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
+    android:id="@+id/RelativeLayout1"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:orientation="vertical"
-    android:weightSum="2" >
+    android:weightSum="5" >
 
-    <RelativeLayout
+    <ViewStub
+        android:id="@+id/playerImageStub"
+        android:layout_width="fill_parent"
+        android:layout_height="fill_parent"
+        android:layout_alignParentLeft="true"
+        android:layout_alignParentTop="true"
+        android:inflatedId="@+id/playAnnotationImageShower"
+        android:layout="@layout/annotation_image_shower" />
+
+    <ViewStub
+        android:id="@+id/playerTextStub"
+        android:layout_width="fill_parent"
+        android:layout_height="fill_parent"
+        android:layout_alignParentLeft="true"
+        android:layout_below="@+id/playerImageStub"
+        android:inflatedId="@+id/playAnnotationShower"
+        android:layout="@layout/annotation_shower_layout" />
+
+    <LinearLayout
         android:id="@+id/imageButtonContainer"
         android:layout_width="match_parent"
-        android:layout_height="142dp"
+        android:layout_height="wrap_content"
+        android:layout_alignParentBottom="true"
+        android:layout_alignParentLeft="true"
         android:background="@drawable/list_bg"
-        android:orientation="horizontal"
-        android:weightSum="4" >
+        android:orientation="vertical" >
 
         <LinearLayout
-            android:id="@+id/linearLayout1"
-            android:layout_width="wrap_content"
+            android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:layout_alignParentLeft="true"
-            android:layout_alignParentTop="true"
-            android:orientation="vertical" >
-        </LinearLayout>
+            android:weightSum="5" >
 
-        <SeekBar
-            android:id="@+id/seekBar1"
-            android:layout_width="fill_parent"
-            android:layout_height="wrap_content"
-            android:layout_marginLeft = "10dp"
-            android:layout_marginRight = "10dp"
-            android:layout_below="@+id/numAnnotations"
-            android:layout_weight="1" />
+            <Chronometer
+                android:id="@+id/chronometer1"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_marginLeft="10dp"
+                android:layout_weight="0.5"
+                android:layout_gravity="center_vertical"
+                android:text="Chronometer" />
+
+            <SeekBar
+                android:id="@+id/seekBar1"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_marginLeft="15dp"
+                android:layout_marginRight="10dp"
+                android:layout_marginTop="10dp"
+                android:layout_weight="4.00" />
+
+            <TextView
+                android:id="@+id/textView1"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_marginRight="10dp"
+                android:layout_gravity="center_vertical"
+                android:layout_weight="0.5"
+                android:text="Small"
+                android:textAppearance="?android:attr/textAppearanceSmall" />
+
+        </LinearLayout>
 
         <TextView
             android:id="@+id/noteNameTextView"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:layout_below="@+id/linearLayout1"
-            android:layout_centerHorizontal="true"
             android:fontFamily="sans-serif-medium"
             android:text="Note Name"
+            android:layout_gravity="center"
             android:textAppearance="?android:attr/textAppearanceLarge"
             android:textColor="#000000" />
 
@@ -46,55 +82,38 @@
             android:id="@+id/numAnnotations"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:layout_below="@+id/noteNameTextView"
-            android:layout_centerHorizontal="true"
             android:fontFamily="sans-serif-light"
             android:text="annotations"
+            android:layout_gravity="center"
             android:textColor="#000000" />
 
-        <ImageView
-            android:id="@+id/playRecordingImageView"
-            android:layout_width="50dp"
-            android:layout_height="50dp"
-            android:layout_below="@+id/seekBar1"
-            android:layout_centerHorizontal="true"
-            android:layout_weight="1"
-            android:clickable="true"
-            android:src="@drawable/ic_action_play" />
+        <LinearLayout
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_gravity="center" >"
 
-        <ImageView
-            android:id="@+id/previousAnnotation"
-            android:layout_width="50dp"
-            android:layout_height="50dp"
-            android:layout_alignParentBottom="true"
-            android:layout_marginBottom="11dp"
-            android:layout_marginLeft="40dp"
-            android:layout_toRightOf="@+id/linearLayout1"
-            android:src="@drawable/ic_action_previous_item" />
+            <ImageView
+                android:id="@+id/previousAnnotation"
+                android:layout_width="50dp"
+                android:layout_height="50dp"
+                android:layout_marginBottom="11dp"
+                android:layout_marginLeft="45dp"
+                android:src="@drawable/ic_action_previous_item" />
 
-        <ImageView
-            android:id="@+id/nextAnnotation"
-            android:layout_width="50dp"
-            android:layout_height="50dp"
-            android:layout_alignBottom="@+id/previousAnnotation"
-            android:layout_alignParentRight="true"
-            android:layout_marginRight="40dp"
-            android:src="@drawable/ic_action_next_item" />
+            <ImageView
+                android:id="@+id/playRecordingImageView"
+                android:layout_width="50dp"
+                android:layout_height="50dp"
+                android:clickable="true"
+                android:src="@drawable/ic_action_play" />
 
-    </RelativeLayout>
-    <ViewStub
-        android:id="@+id/playerImageStub"
-        android:layout_width="fill_parent"
-        android:layout_height="fill_parent"
-        android:inflatedId="@+id/playAnnotationImageShower"
-        android:layout="@layout/annotation_image_shower" />
-    
-    <ViewStub
-        android:id="@+id/playerTextStub"
-        android:layout_width="fill_parent"
-        android:layout_height="fill_parent"
-        android:inflatedId="@+id/playAnnotationShower"
-        android:layout="@layout/annotation_shower_layout" />
-   
-    
-</LinearLayout>
+            <ImageView
+                android:id="@+id/nextAnnotation"
+                android:layout_width="50dp"
+                android:layout_height="50dp"
+                android:layout_marginRight="40dp"
+                android:src="@drawable/ic_action_next_item" />
+        </LinearLayout>
+    </LinearLayout>
+
+</RelativeLayout>
