--- a/Echonotes/res/layout/text_annotation.xml
+++ b/Echonotes/res/layout/text_annotation.xml
@@ -2,56 +2,43 @@
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:orientation="vertical" >
+    android:orientation="vertical"
+    android:background="#ffffffff" >
 
-    <RelativeLayout
+    <LinearLayout
         android:layout_width="match_parent"
-        android:layout_height="0dp"
-        android:layout_weight="0.31"
-        android:background="#ffffff" >
-
-        <EditText
-            android:id="@+id/textAnnotationEditText"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_alignParentBottom="true"
-            android:layout_alignParentLeft="true"
-            android:layout_alignParentRight="true"
-            android:layout_below="@+id/cancelTextButton"
-            android:ems="10"
-            android:gravity="top"
-            android:textColor="#000000"
-            android:textSize="24sp"
-            android:fontFamily="serif"
-            android:hint="Enter your annotation"
-            android:inputType="textMultiLine" >
-
-            <requestFocus />
-        </EditText>
-
-        <Button
-            android:id="@+id/cancelTextButton"
-            style="?android:attr/buttonStyleSmall"
-            android:layout_width="170dp"
-            android:layout_height="wrap_content"
-            android:layout_alignBaseline="@+id/cancelTextButton"
-            android:layout_alignBottom="@+id/cancelTextButton"
-            android:layout_alignParentRight="true"
-            android:layout_marginRight="20dp"
-            android:text="Cancel"
-            android:textColor="#000000" />
+        android:layout_height="wrap_content"
+        android:weightSum="2" >
 
         <Button
             android:id="@+id/saveTextButton"
             style="?android:attr/buttonStyleSmall"
-            android:layout_width="170dp"
+            android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:layout_alignParentTop="true"
-            android:layout_marginLeft="20dp"
-            android:layout_toLeftOf="@+id/saveTextButton"
-            android:textColor="#000000"
-            android:text="Save" />
+            android:layout_weight="1"
+            android:text="Save"
+            android:textColor="#000000" />
 
-    </RelativeLayout>
+        <Button
+            android:id="@+id/cancelTextButton"
+            style="?android:attr/buttonStyleSmall"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_weight="1"
+            android:text="Cancel"
+            android:textColor="#000000" />
+    </LinearLayout>
+
+    <EditText
+        android:id="@+id/textAnnotationEditText"
+        android:layout_width="wrap_content"
+        android:layout_height="fill_parent"
+        android:ems="10"
+        android:fontFamily="serif"
+        android:gravity="top"
+        android:hint="Enter your annotation"
+        android:inputType="textMultiLine"
+        android:textColor="#000000"
+        android:textSize="24sp" />
 
 </LinearLayout>
