--- a/Echonotes/res/xml/preference.xml
+++ b/Echonotes/res/xml/preference.xml
@@ -3,12 +3,16 @@
     <PreferenceCategory android:title = "MAIN">
         <PreferenceScreen android:title="Change Tag Names" 
             			  android:summary="Change names of existing tags" >
-            <!-- microphone settings here -->
-            <EditTextPreference android:title="Enter Text"
-                android:key="Text" />
+            <EditTextPreference android:key="etTagPos0" android:dialogTitle="New Tag Name" />
+            <EditTextPreference android:key="etTagPos1" android:dialogTitle="New Tag Name"/>
+            <EditTextPreference android:key="etTagPos2" android:dialogTitle="New Tag Name"/>
+            <EditTextPreference android:key="etTagPos3" android:dialogTitle="New Tag Name"/>
+            <EditTextPreference android:key="etTagPos4" android:dialogTitle="New Tag Name"/>
+            <EditTextPreference android:key="etTagPos5" android:dialogTitle="New Tag Name"/>
         </PreferenceScreen>
         <CheckBoxPreference android:title = "Record even on standby"
-            				android:key = "RecordPreference" />"
+            				android:key = "RecordPreference"
+            				android:defaultValue="true" />"
     </PreferenceCategory>
     <PreferenceCategory android:title="MISC">
         <ListPreference android:title="Sort Echonotes by"
